Fix Desktop Overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,5 @@
 html {
     cursor: none;
-    overflow-y: hidden;
 }
 
 /* Customize scrollbar */
@@ -32,6 +31,7 @@ html {
 body {
     background-color: #f1f1f1;
     margin: 0;
+    overflow-y: hidden !important;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;   
 }
 
